---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    - Limited beacon amount to 1 when using the mod with Space Exploration
  Bugfixes:
    -

---------------------------------------------------------------------------------------------------
Version: 1.1.63
Date: 29. 04. 2023
  Features:
    - Subfactories can now be duplicated from the archive, placing them into the main list
  Changes:
    - Redesigned the subfactory info box slightly
    - Made the game pause button more obvious in the UI
    - Removed the amount indication on machines and fuels in the machine dialog
  Bugfixes:
    - Fixed an issue where items were showing the wrong recipes to produce them sometimes, leading to crashes
    - Fixed a bug where module effects were not updated straight away when changing a machine or beacon type
    - Fixed that putting top level ingredients into the cursor would not respect the 'show floor items' preference
    - Fixed that machine energy drain was generating pollution when it shouldn't be
    - Fixed that a recipe's priority product was not always retained properly
    - Fixed that certain Exotic Industries recipes would not be usable until researched
    - Fixed duplicate machines being detected in Industrial Revolution 3

---------------------------------------------------------------------------------------------------
Version: 1.1.62
Date: 27. 04. 2023
  Bugfixes:
    - Fixed that specifying amounts on top level ingredients was disabled when the matrix solver was enabled
    - Fixed a crash when selecting a specific nexelit recipe from PyMods
    - Fixed that the tutorial mode toggle was always re-activated during migration
    - Fixed that repairing a machine with invalid fuel would not work properly
    - Fixed that a couple of strings could not be localised
