@@ -5,6 +5,7 @@ Date: 00. 00. 0000
     -
   Changes:
     - Limited beacon amount to 1 when using the mod with Space Exploration
+    - Changed exact machine limits to default to being enabled
   Bugfixes:
     -
 
